[gd_scene load_steps=5 format=2]

[ext_resource path="res://eklentiler/PNG/Default size/towerDefense_tile246.png" type="Texture" id=1]
[ext_resource path="res://eklentiler/PNG/Default size/towerDefense_tile247.png" type="Texture" id=2]
[ext_resource path="res://kodlar/man.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[node name="man" type="KinematicBody2D" groups=[
"mans",
]]
collision_layer = 3
script = ExtResource( 3 )

[node name="resim1" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="resim2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 25, 0 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="."]
rotation = 0.523599
enabled = true
cast_to = Vector2( 25, 0 )
collision_mask = 2

[node name="RayCast2D3" type="RayCast2D" parent="."]
rotation = 1.0472
enabled = true
cast_to = Vector2( 25, 0 )
collision_mask = 2

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 8, -32 )

[node name="RayCast2D4" type="RayCast2D" parent="."]
rotation = -0.523599
enabled = true
cast_to = Vector2( 25, 0 )
collision_mask = 2

[node name="RayCast2D5" type="RayCast2D" parent="."]
rotation = -1.0472
enabled = true
cast_to = Vector2( 25, 0 )
collision_mask = 2

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 8, 32 )

[node name="name_label" type="Label" parent="."]
visible = false
margin_left = -28.0
margin_top = -16.0
margin_right = 12.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.005
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
